[tool.poetry]
name = "targetrepo"
version = "0.1.0"
description = ""
authors = ["Tom <tom.wei@onedegree.hk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
